@@ -1,4 +1,5 @@
 3.6
+ * Log endpoint and port associated with streaming operation (CASSANDRA-8777)
  * Add metrics to track write amplification (CASSANDRA-11420)
  * cassandra-stress: cannot handle "value-less" tables (CASSANDRA-7739)
  * Add/drop multiple columns in one ALTER TABLE statement (CASSANDRA-10411)
